# FunASR-bmodel

./: README.md  download.sh  main.py  pyproject.toml  system_phrases.txt
bmodel/: README.md  check_time.py  main.py  monitor.py  offline.py  requirements.txt
bmodel/punc_ct-transformer_zh-cn-common-vocab272727/: README.md
bmodel/punc_ct-transformer_zh-cn-common-vocab272727/scripts/: download.sh  gen_fp16bmodel_mlir.sh  gen_fp32bmodel_mlir.sh  gen_input.py
bmodel/speech_campplus_sv_zh-cn_16k-common/scripts/: download.sh  gen_fp16bmodel_mlir.sh  gen_fp32bmodel_mlir.sh
bmodel/speech_fsmn_vad_zh-cn-16k-common/: README.md
bmodel/speech_fsmn_vad_zh-cn-16k-common/scripts/: download.sh  gen_fp16bmodel_mlir.sh  gen_fp32bmodel_mlir.sh  gen_input.py
bmodel/speech_paraformer-large-contextual_asr_nat-zh-cn-16k-common-vocab8404/: README.md
bmodel/speech_paraformer-large-contextual_asr_nat-zh-cn-16k-common-vocab8404/docs/: Export_Guide.md
bmodel/speech_paraformer-large-contextual_asr_nat-zh-cn-16k-common-vocab8404/scripts/: download.sh  gen_decoder_input.py  gen_eb_input.py  gen_encoder_input.py  gen_fp16bmodel_decoder.sh  gen_fp16bmodel_encoder.sh  gen_fp32bmodel_decoder.sh  gen_fp32bmodel_eb.sh  gen_fp32bmodel_encoder.sh
bmodel/speech_paraformer-large_asr_nat-zh-cn-16k-common-vocab8404-online/: README.md
bmodel/speech_paraformer-large_asr_nat-zh-cn-16k-common-vocab8404-online/scripts/: download.sh  gen_decoder0_input.py  gen_decoder1_input.py  gen_decoder_input.py  gen_encoder_input.py  gen_fp32bmodel_decoder.sh  gen_fp32bmodel_decoder0.sh  gen_fp32bmodel_decoder1.sh  gen_fp32bmodel_encoder.sh  gen_fp32bmodel_model.sh  gen_model_input.py
bmodel/speech_seaco_paraformer_large_asr_nat-zh-cn-16k-common-vocab8404/: README.md
bmodel/speech_seaco_paraformer_large_asr_nat-zh-cn-16k-common-vocab8404/scripts/: download.sh
funasr/auto/: auto_model.py
funasr/download/: download_model_from_hub.py
funasr/train_utils/: load_pretrained_model.py
funasr/utils/: load_utils.py
(+9 files in other folders)
